[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["Jin <tkdtkdqja@naver.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
mangum = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
